--- a/Notepad/Notepad.ipynb
+++ b/Notepad/Notepad.ipynb
@@ -20,99 +20,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " * Running on http://0.0.0.0:49054/ (Press CTRL+C to quit)\n",
-      "127.0.0.1 - - [03/May/2021 15:28:20] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [03/May/2021 15:28:20] \"\u001b[36mGET /appSRP.js HTTP/1.1\u001b[0m\" 304 -\n",
-      "127.0.0.1 - - [03/May/2021 15:28:21] \"\u001b[37mPOST /command HTTP/1.1\u001b[0m\" 200 -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'commandHash': '2cdaeb6d48b5ccd8d6666cf725fa86eaa4cf7aacb172dcdb9082e466af42d94a'}\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "127.0.0.1 - - [03/May/2021 15:45:13] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [03/May/2021 15:45:13] \"\u001b[36mGET /appSRP.js HTTP/1.1\u001b[0m\" 304 -\n",
-      "127.0.0.1 - - [03/May/2021 17:20:54] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [03/May/2021 17:20:54] \"\u001b[36mGET /appSRP.js HTTP/1.1\u001b[0m\" 304 -\n",
-      "127.0.0.1 - - [03/May/2021 17:36:29] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [03/May/2021 17:36:29] \"\u001b[36mGET /appSRP.js HTTP/1.1\u001b[0m\" 304 -\n",
-      "127.0.0.1 - - [03/May/2021 17:36:31] \"\u001b[37mPOST /command HTTP/1.1\u001b[0m\" 200 -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'commandHash': 'bd249d08a8ac679e2006237960f7a09841bcdc14f09ddf245626011ad8bb7b12'}\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "127.0.0.1 - - [03/May/2021 18:26:23] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [03/May/2021 18:26:23] \"\u001b[36mGET /appSRP.js HTTP/1.1\u001b[0m\" 304 -\n",
-      "127.0.0.1 - - [03/May/2021 18:26:34] \"\u001b[37mPOST /command HTTP/1.1\u001b[0m\" 200 -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'commandHash': '04d14cd4d316074447f2d427d75b7057ceacabf31013e5a70db6e0648261c08f'}\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "127.0.0.1 - - [03/May/2021 18:26:51] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [03/May/2021 18:26:51] \"\u001b[36mGET /appSRP.js HTTP/1.1\u001b[0m\" 304 -\n",
-      "127.0.0.1 - - [03/May/2021 18:26:52] \"\u001b[37mPOST /command HTTP/1.1\u001b[0m\" 200 -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'commandHash': 'c4779be75e4efb8ef3524a2d2d52de34d6dac721a3893aefdb66486f775fa699'}\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "127.0.0.1 - - [03/May/2021 18:27:24] \"\u001b[37mPOST /command HTTP/1.1\u001b[0m\" 200 -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'commandHash': 'c4779be75e4efb8ef3524a2d2d52de34d6dac721a3893aefdb66486f775fa699'}\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "127.0.0.1 - - [03/May/2021 21:47:16] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [03/May/2021 21:47:17] \"\u001b[37mGET /appSRP.js HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [03/May/2021 21:47:27] \"\u001b[37mPOST /command HTTP/1.1\u001b[0m\" 200 -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'commandHash': 'ed78b0d7621d5db5b12750b7ade33b78a9c205f680d82bac7585eb20aa9ef17f'}\n"
+      " * Running on http://0.0.0.0:49054/ (Press CTRL+C to quit)\n"
      ]
     }
    ],
@@ -165,7 +73,6 @@
     "\n",
     "@app.route('/command',methods=[\"POST\"])\n",
     "def command():\n",
-    "    print(request.json)\n",
     "    sign = signSRP(SECRET_KEY,request.json[\"commandHash\"])\n",
     "    return sign\n",
     "\n",
