--- a/Portal SRP/Portal SRP.ipynb
+++ b/Portal SRP/Portal SRP.ipynb
@@ -22,47 +22,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " * Running on http://0.0.0.0:49051/ (Press CTRL+C to quit)\n",
-      "127.0.0.1 - - [03/May/2021 18:51:40] \"\u001b[37mGET /getApp?id=608ff071856012aac7511084 HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [03/May/2021 18:53:32] \"\u001b[37mGET /getApp?id=608ff071856012aac7511084 HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [03/May/2021 18:53:34] \"\u001b[37mGET /getApp?id=608ff071856012aac7511084 HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [03/May/2021 18:53:36] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [03/May/2021 18:53:37] \"\u001b[37mGET /getApp?id=608f1351b59c6f34109189d9 HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [03/May/2021 18:53:39] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [03/May/2021 18:53:39] \"\u001b[37mGET /create HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [03/May/2021 18:53:52] \"\u001b[32mPOST /createSave HTTP/1.1\u001b[0m\" 302 -\n",
-      "127.0.0.1 - - [03/May/2021 18:53:52] \"\u001b[37mGET /secretKey?link_id=60901c90856012aac75110ca HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [03/May/2021 18:53:54] \"\u001b[37mGET /getApp?id=60901c90856012aac75110c9 HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [03/May/2021 18:53:56] \"\u001b[37mGET /devApp?id=60901c90856012aac75110c9 HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [03/May/2021 18:53:59] \"\u001b[37mGET /admin HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [03/May/2021 18:54:01] \"\u001b[37mGET /adminApp?id=60901c90856012aac75110c9 HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [03/May/2021 18:54:10] \"\u001b[32mPOST /adminSave HTTP/1.1\u001b[0m\" 302 -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ImmutableMultiDict([('appID', '60901c90856012aac75110c9'), ('name', 'thgrdghshtsd'), ('devName', 'rregsaregsea'), ('email', 'maxnosko@mail.ru'), ('appSite', 'http:/localhost:49055/'), ('appDesc', 'ewrfesagfreas'), ('list', 'off'), ('read', 'off'), ('write', 'on'), ('delete', 'off'), ('mkdir', 'off'), ('rename', 'on'), ('adminPassword', 'ADMIN_PASSWORD')])\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "127.0.0.1 - - [03/May/2021 18:54:11] \"\u001b[37mGET /adminApp?id=60901c90856012aac75110c9 HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [03/May/2021 18:54:13] \"\u001b[37mGET /admin HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [03/May/2021 18:54:15] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [03/May/2021 18:54:17] \"\u001b[37mGET /getApp?id=60901c90856012aac75110c9 HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [03/May/2021 18:54:25] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [03/May/2021 18:54:32] \"\u001b[37mGET /admin HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [03/May/2021 18:54:34] \"\u001b[37mGET /adminApp?id=60901c90856012aac75110c9 HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [03/May/2021 18:54:39] \"\u001b[32mPOST /adminDelete HTTP/1.1\u001b[0m\" 302 -\n",
-      "127.0.0.1 - - [03/May/2021 18:54:39] \"\u001b[37mGET /admin HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [03/May/2021 18:57:01] \"\u001b[37mGET /adminApp?id=608ff071856012aac7511084 HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [03/May/2021 18:57:07] \"\u001b[37mGET /create HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [03/May/2021 18:57:08] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [03/May/2021 18:57:09] \"\u001b[37mGET /getApp?id=608ff071856012aac7511084 HTTP/1.1\u001b[0m\" 200 -\n"
+      " * Running on http://0.0.0.0:49051/ (Press CTRL+C to quit)\n"
      ]
     }
    ],
@@ -207,7 +167,6 @@
     "\n",
     "@app.route(\"/adminSave\",methods=['POST'])\n",
     "def adminSave():\n",
-    "    print(request.form)\n",
     "    if request.form.get('name', \"\")==\"\":\n",
     "        return redirect(\"/saveError\")\n",
     "    if request.form.get('email', \"\")==\"\":\n",
