Добавлены скриншоты карточек приложений на портале

--- a/Explorer/Explorer.ipynb
+++ b/Explorer/Explorer.ipynb
@@ -20,38 +20,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " * Running on http://0.0.0.0:49055/ (Press CTRL+C to quit)\n",
-      "127.0.0.1 - - [03/May/2021 23:20:49] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [03/May/2021 23:20:49] \"\u001b[36mGET /appSRP.js HTTP/1.1\u001b[0m\" 304 -\n",
-      "127.0.0.1 - - [03/May/2021 23:23:28] \"\u001b[37mPOST /command HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [03/May/2021 23:23:43] \"\u001b[37mPOST /command HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [03/May/2021 23:23:48] \"\u001b[37mPOST /command HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [03/May/2021 23:24:18] \"\u001b[37mPOST /command HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [03/May/2021 23:24:29] \"\u001b[37mPOST /command HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [03/May/2021 23:24:29] \"\u001b[37mPOST /command HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [03/May/2021 23:24:32] \"\u001b[37mPOST /command HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [03/May/2021 23:24:37] \"\u001b[37mPOST /command HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [03/May/2021 23:24:57] \"\u001b[37mPOST /command HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [03/May/2021 23:24:57] \"\u001b[37mPOST /command HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [03/May/2021 23:24:59] \"\u001b[37mPOST /command HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [03/May/2021 23:25:53] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [03/May/2021 23:25:53] \"\u001b[36mGET /appSRP.js HTTP/1.1\u001b[0m\" 304 -\n",
-      "127.0.0.1 - - [03/May/2021 23:26:01] \"\u001b[37mPOST /command HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [03/May/2021 23:27:14] \"\u001b[37mPOST /command HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [03/May/2021 23:28:23] \"\u001b[37mPOST /command HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [03/May/2021 23:28:23] \"\u001b[37mPOST /command HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [03/May/2021 23:42:17] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [03/May/2021 23:42:17] \"\u001b[36mGET /appSRP.js HTTP/1.1\u001b[0m\" 304 -\n",
-      "127.0.0.1 - - [03/May/2021 23:42:19] \"\u001b[37mPOST /command HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [03/May/2021 23:42:37] \"\u001b[37mPOST /command HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [03/May/2021 23:43:14] \"\u001b[37mPOST /command HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [03/May/2021 23:44:12] \"\u001b[37mPOST /command HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [03/May/2021 23:44:12] \"\u001b[37mPOST /command HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [03/May/2021 23:44:15] \"\u001b[37mPOST /command HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [03/May/2021 23:44:43] \"\u001b[37mPOST /command HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [03/May/2021 23:44:57] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [03/May/2021 23:44:57] \"\u001b[36mGET /appSRP.js HTTP/1.1\u001b[0m\" 304 -\n",
-      "127.0.0.1 - - [03/May/2021 23:45:27] \"\u001b[37mPOST /command HTTP/1.1\u001b[0m\" 200 -\n"
+      " * Running on http://0.0.0.0:49055/ (Press CTRL+C to quit)\n"
      ]
     }
    ],
