--- a/Explorer/Explorer.ipynb
+++ b/Explorer/Explorer.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -25,10 +25,10 @@
     }
    ],
    "source": [
-    "APP_PORT=49055\n",
-    "APP_HOST='0.0.0.0'\n",
-    "APP_ID=\"608ff071856012aac7511084\"\n",
-    "SECRET_KEY=\"e2a3f56dcdc154d470a5172246ad2485e08eb7b7cee5003bdf784607e97480b2\"\n",
+    "APP_PORT=49055#порт приложения\n",
+    "APP_HOST='0.0.0.0'#хост приложения\n",
+    "APP_ID=\"608ff071856012aac7511084\"#идентификатор приложения с Портала СРП\n",
+    "SECRET_KEY=\"e2a3f56dcdc154d470a5172246ad2485e08eb7b7cee5003bdf784607e97480b2\"#секретный ключ приложения с Портала СРП\n",
     "\n",
     "import datetime\n",
     "from bson.objectid import ObjectId\n",
@@ -55,30 +55,30 @@
     "import json\n",
     "from appServerSRP import signSRP\n",
     "\n",
-    "app = Flask(__name__)\n",
+    "app = Flask(__name__) #создание объекта сервера\n",
     "app.config['TEMPLATES_AUTO_RELOAD'] = True\n",
     "\n",
-    "@app.after_request\n",
-    "def add_header(r):\n",
+    "@app.after_request #Запрет кеширования\n",
+    "def add_header(r): \n",
     "    r.headers[\"Cache-Control\"] = \"no-cache, no-store, must-revalidate\"\n",
     "    r.headers[\"Pragma\"] = \"no-cache\"\n",
     "    r.headers[\"Expires\"] = \"0\"\n",
     "    r.headers['Cache-Control'] = 'public, max-age=0'\n",
     "    return r\n",
     "\n",
-    "@app.route('/',methods=[\"GET\"])\n",
+    "@app.route('/',methods=[\"GET\"])#отображение страницы\n",
     "def index():\n",
     "    return render_template(\"explorer.html\")\n",
     "\n",
-    "@app.route('/command',methods=[\"POST\"])\n",
+    "@app.route('/command',methods=[\"POST\"])#подпись\n",
     "def command():\n",
     "    sign = signSRP(SECRET_KEY,request.json[\"commandHash\"])\n",
     "    return sign\n",
     "\n",
-    "@app.route('/appSRP.js',methods=[\"GET\"])\n",
+    "@app.route('/appSRP.js',methods=[\"GET\"])#библиотека для работы с СРП\n",
     "def script():\n",
     "    return send_from_directory('templates', 'appSRP.js')\n",
-    "app.run(host=APP_HOST, port=APP_PORT, threaded=True)"
+    "app.run(host=APP_HOST, port=APP_PORT, threaded=True)#запуск сервера"
    ]
   }
  ],
