--- a/Notepad/Notepad.ipynb
+++ b/Notepad/Notepad.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -25,10 +25,10 @@
     }
    ],
    "source": [
-    "APP_PORT=49054\n",
-    "APP_HOST='0.0.0.0'\n",
-    "APP_ID=\"608f1351b59c6f34109189d9\"\n",
-    "SECRET_KEY=\"a7ed6223a0e28d7ade13a6b9c7902e729d43ba4695f88e436be8d16a70796d57\"\n",
+    "APP_PORT=49054#порт приложения\n",
+    "APP_HOST='0.0.0.0'#хост приложения\n",
+    "APP_ID=\"608f1351b59c6f34109189d9\"#идентификатор приложения с Портала СРП\n",
+    "SECRET_KEY=\"a7ed6223a0e28d7ade13a6b9c7902e729d43ba4695f88e436be8d16a70796d57\"#секретный ключ приложения с Портала СРП\n",
     "\n",
     "import datetime\n",
     "from bson.objectid import ObjectId\n",
@@ -56,10 +56,10 @@
     "from appServerSRP import signSRP\n",
     "\n",
     "\n",
-    "app = Flask(__name__)\n",
+    "app = Flask(__name__)#создание объекта сервера\n",
     "app.config['TEMPLATES_AUTO_RELOAD'] = True\n",
     "\n",
-    "@app.after_request\n",
+    "@app.after_request#Запрет кеширования\n",
     "def add_header(r):\n",
     "    r.headers[\"Cache-Control\"] = \"no-cache, no-store, must-revalidate\"\n",
     "    r.headers[\"Pragma\"] = \"no-cache\"\n",
@@ -67,19 +67,19 @@
     "    r.headers['Cache-Control'] = 'public, max-age=0'\n",
     "    return r\n",
     "\n",
-    "@app.route('/',methods=[\"GET\"])\n",
+    "@app.route('/',methods=[\"GET\"])#отображение страницы\n",
     "def index():\n",
     "    return render_template(\"notepad.html\")\n",
     "\n",
-    "@app.route('/command',methods=[\"POST\"])\n",
+    "@app.route('/command',methods=[\"POST\"])#подпись\n",
     "def command():\n",
     "    sign = signSRP(SECRET_KEY,request.json[\"commandHash\"])\n",
     "    return sign\n",
     "\n",
-    "@app.route('/appSRP.js',methods=[\"GET\"])\n",
+    "@app.route('/appSRP.js',methods=[\"GET\"])#библиотека для работы с СРП\n",
     "def script():\n",
     "    return send_from_directory('templates', 'appSRP.js')\n",
-    "app.run(host=APP_HOST, port=APP_PORT, threaded=True)"
+    "app.run(host=APP_HOST, port=APP_PORT, threaded=True)#запуск сервера"
    ]
   }
  ],
