--- a/Portal SRP/Portal SRP.ipynb
+++ b/Portal SRP/Portal SRP.ipynb
@@ -27,9 +27,9 @@
     }
    ],
    "source": [
-    "PORTAL_PORT=49051\n",
-    "PORTAL_HOST='0.0.0.0'\n",
-    "DATABASE_PORT=27017\n",
+    "PORTAL_PORT=49051#порт Портала СРП\n",
+    "PORTAL_HOST='0.0.0.0'#хост портала\n",
+    "DATABASE_PORT=27017#порт базы данных\n",
     "\n",
     "import datetime\n",
     "from bson.objectid import ObjectId\n",
@@ -49,19 +49,19 @@
     "import pymongo\n",
     "import os.path\n",
     "\n",
-    "if os.path.isfile('.ADMIN_PASSWORD'):\n",
-    "    with open('.ADMIN_PASSWORD','r') as f:\n",
+    "if os.path.isfile('.ADMIN_PASSWORD'):#проверка наличия файла с паролем администратора \n",
+    "    with open('.ADMIN_PASSWORD','r') as f:#если файл есть, пароль считывается из него\n",
     "        ADMIN_PASSWORD = f.read()\n",
     "else:\n",
-    "    with open('.ADMIN_PASSWORD','w') as f:\n",
+    "    with open('.ADMIN_PASSWORD','w') as f:#если его нет, он создаётся со стандартным значением пароля\n",
     "        ADMIN_PASSWORD = \"ADMIN_PASSWORD\"\n",
     "        f.write(ADMIN_PASSWORD)\n",
     "\n",
     "\n",
-    "app = Flask(__name__)\n",
+    "app = Flask(__name__)#создание объекта сервера\n",
     "app.config['TEMPLATES_AUTO_RELOAD'] = True\n",
     "\n",
-    "@app.after_request\n",
+    "@app.after_request#запрет кеширования\n",
     "def add_header(r):\n",
     "    r.headers[\"Cache-Control\"] = \"no-cache, no-store, must-revalidate\"\n",
     "    r.headers[\"Pragma\"] = \"no-cache\"\n",
@@ -69,21 +69,21 @@
     "    r.headers['Cache-Control'] = 'public, max-age=0'\n",
     "    return r\n",
     "\n",
-    "@app.route('/create')\n",
+    "@app.route('/create')#страница с формой создания\n",
     "def create():\n",
     "    return render_template(\"formCreate.html\")\n",
     "\n",
-    "@app.route('/createError')\n",
+    "@app.route('/createError')#страница с ошибкой создания\n",
     "def createError():\n",
     "    return render_template(\"createError.html\")\n",
     "\n",
-    "@app.route('/saveError')\n",
+    "@app.route('/saveError')#страница с ошибкой сохранения\n",
     "def saveError():\n",
     "    return render_template(\"saveError.html\")\n",
     "\n",
-    "@app.route(\"/createSave\",methods=['POST'])\n",
+    "@app.route(\"/createSave\",methods=['POST'])#запрос на создание приложения\n",
     "def createSave():\n",
-    "    if request.form.get('name', \"\")==\"\":\n",
+    "    if request.form.get('name', \"\")==\"\":#проверка заполнения полей\n",
     "        return redirect(\"/createError\")\n",
     "    if request.form.get('email', \"\")==\"\":\n",
     "        return redirect(\"/createError\")\n",
@@ -99,19 +99,22 @@
     "    for i in form_checks:\n",
     "        t=request.form.get(i, \"off\")\n",
     "        if t==\"on\":\n",
-    "            t=\"zapros\"\n",
+    "            t=\"zapros\"#если при заполнении формы запрошено полномочие, оно заменяется на запрашиваемое\n",
     "        appObject[i]=t\n",
-    "    appObject[\"salt\"]=''.join(random.choices(string.ascii_letters + string.digits, k=10))\n",
+    "    appObject[\"salt\"]=''.join(random.choices(string.ascii_letters + string.digits, k=10))#генерация соли для пароли\n",
+    "    #генераиця хеша пароля с солью\n",
     "    appObject[\"passwordHash\"]=sha256((appObject[\"salt\"]+request.form.get('appPassword', \"\")).encode('utf-8')).hexdigest()\n",
+    "    #генерация секретного ключа приложения\n",
     "    appObject[\"secretKey\"]=sha256(''.join(random.choices(string.ascii_letters + string.digits, k=10)).encode('utf-8')).hexdigest()\n",
-    "    appObject[\"date\"]=datetime.datetime.utcnow()\n",
+    "    appObject[\"date\"]=datetime.datetime.utcnow()#запись времени создания\n",
     "    client = MongoClient(port=DATABASE_PORT)\n",
     "    db=client.srp\n",
-    "    result=db.apps.insert_one(appObject)\n",
+    "    result=db.apps.insert_one(appObject)#добавление приложения\n",
+    "    #добавление временной ссылки для отображения секретного ключа 1 раз\n",
     "    link=db.links.insert_one({\"appID\":result.inserted_id})\n",
-    "    return redirect(f\"/secretKey?link_id={link.inserted_id}\")\n",
+    "    return redirect(f\"/secretKey?link_id={link.inserted_id}\")#переадресация для отображения секретного ключа\n",
     "\n",
-    "@app.route(\"/getApp\",methods=['GET'])\n",
+    "@app.route(\"/getApp\",methods=['GET'])#страница с карточкой приложения\n",
     "def getApp():\n",
     "    appID=request.args.get('id',\"Ошибка\")\n",
     "    client = MongoClient(port=DATABASE_PORT)\n",
@@ -119,12 +122,12 @@
     "    appObject=db.apps.find_one({\"_id\":ObjectId(appID)})\n",
     "    return render_template(\"getApp.html\",appObject=appObject)\n",
     "\n",
-    "@app.route(\"/\",methods=['GET'])\n",
+    "@app.route(\"/\",methods=['GET'])#отображение списка приложений\n",
     "def appList():\n",
     "    client = MongoClient(port=DATABASE_PORT)\n",
     "    db=client.srp\n",
     "    apps=list()\n",
-    "    for i in db.apps.find({}).sort(\"date\",pymongo.DESCENDING):\n",
+    "    for i in db.apps.find({}).sort(\"date\",pymongo.DESCENDING):#сортировка приложений от новых к старым\n",
     "        t=i\n",
     "        m=[\"list\",\"read\",\"write\",\"delete\"]\n",
     "        status=\"off\"\n",
@@ -138,7 +141,7 @@
     "        apps.append(t)\n",
     "    return render_template(\"appList.html\",apps=apps,mode=\"read\")\n",
     "    \n",
-    "@app.route(\"/admin\",methods=['GET'])\n",
+    "@app.route(\"/admin\",methods=['GET'])#список приложений для администратора\n",
     "def admin():\n",
     "    client = MongoClient(port=DATABASE_PORT)\n",
     "    db=client.srp\n",
@@ -157,7 +160,7 @@
     "        apps.append(t)\n",
     "    return render_template(\"appList.html\",apps=apps,mode=\"admin\")\n",
     "\n",
-    "@app.route(\"/adminApp\")\n",
+    "@app.route(\"/adminApp\")#редактирование карточки приложения\n",
     "def adminApp():\n",
     "    appID=request.args.get('id',\"Ошибка\")\n",
     "    client = MongoClient(port=DATABASE_PORT)\n",
@@ -165,9 +168,9 @@
     "    appObject=db.apps.find_one({\"_id\":ObjectId(appID)})\n",
     "    return render_template(\"adminApp.html\",appObject=appObject)\n",
     "\n",
-    "@app.route(\"/adminSave\",methods=['POST'])\n",
+    "@app.route(\"/adminSave\",methods=['POST'])#сохранение карточки приложения после редактирования\n",
     "def adminSave():\n",
-    "    if request.form.get('name', \"\")==\"\":\n",
+    "    if request.form.get('name', \"\")==\"\":#проверка корректности заполнения формы\n",
     "        return redirect(\"/saveError\")\n",
     "    if request.form.get('email', \"\")==\"\":\n",
     "        return redirect(\"/saveError\")\n",
@@ -175,12 +178,12 @@
     "        return redirect(\"/saveError\")\n",
     "    if request.form.get('appSite', \"\")==\"\":\n",
     "        return redirect(\"/saveError\")\n",
-    "    if request.form.get(\"adminPassword\",\"\") != ADMIN_PASSWORD:\n",
+    "    if request.form.get(\"adminPassword\",\"\") != ADMIN_PASSWORD:#проверка пароля администратора\n",
     "        return redirect(\"/saveError\")\n",
     "    appID=request.form.get('appID', \"\")\n",
     "    client = MongoClient(port=DATABASE_PORT)\n",
     "    db=client.srp\n",
-    "    db.apps.update_one({\"_id\":ObjectId(appID)},\n",
+    "    db.apps.update_one({\"_id\":ObjectId(appID)},#изменение объекта в БД\n",
     "                       {'$set': \n",
     "                       {\n",
     "                           \"name\":request.form.get('name', \"\"),\n",
@@ -197,7 +200,7 @@
     "                       }})\n",
     "    return redirect(f\"/adminApp?id={appID}\")\n",
     "\n",
-    "@app.route(\"/adminDelete\",methods=['POST'])\n",
+    "@app.route(\"/adminDelete\",methods=['POST'])#запрос на удаление приложения\n",
     "def adminDelete():\n",
     "    if request.form.get(\"adminPassword\",\"\") != ADMIN_PASSWORD:\n",
     "        return redirect(\"/saveError\")\n",
@@ -207,7 +210,7 @@
     "    db.apps.delete_one({\"_id\":ObjectId(appID)})\n",
     "    return redirect(\"/admin\")\n",
     "\n",
-    "@app.route('/secretKey')\n",
+    "@app.route('/secretKey')#запрос на показ секретного ключа\n",
     "def secretKey():\n",
     "    linkID=request.args.get('link_id',\"Ошибка\")\n",
     "    client = MongoClient(port=DATABASE_PORT)\n",
@@ -217,7 +220,7 @@
     "    db.links.delete_one({\"_id\":ObjectId(linkID)})\n",
     "    return render_template(\"secretKey.html\",appObject=appObject)\n",
     "\n",
-    "@app.route(\"/devApp\")\n",
+    "@app.route(\"/devApp\")#управление приложением для разработчика\n",
     "def devApp():\n",
     "    appID=request.args.get('id',\"Ошибка\")\n",
     "    client = MongoClient(port=DATABASE_PORT)\n",
@@ -225,7 +228,7 @@
     "    appObject=db.apps.find_one({\"_id\":ObjectId(appID)})\n",
     "    return render_template(\"devApp.html\",appObject=appObject)\n",
     "\n",
-    "@app.route(\"/devNewKey\",methods=[\"POST\"])\n",
+    "@app.route(\"/devNewKey\",methods=[\"POST\"])#запрос разработчика на генерацию нового ключа\n",
     "def devNewKey():\n",
     "    appID=request.form.get('appID', \"\")\n",
     "    client = MongoClient(port=DATABASE_PORT)\n",
@@ -233,19 +236,20 @@
     "    appObject=db.apps.find_one({\"_id\":ObjectId(appID)})\n",
     "    salt=appObject[\"salt\"]\n",
     "    dbHash=appObject[\"passwordHash\"]\n",
+    "    #вычисление хеша из соли и введённого пароля\n",
     "    formHash=sha256((salt+request.form.get('devPassword', \"\")).encode('utf-8')).hexdigest()\n",
-    "    if dbHash != formHash:\n",
-    "        return redirect(\"/saveError\")\n",
-    "    newKey=sha256(''.join(random.choices(string.ascii_letters + string.digits, k=10)).encode('utf-8')).hexdigest()\n",
-    "    db.apps.update_one({\"_id\":ObjectId(appID)},\n",
+    "    if dbHash != formHash:#сравнение хеша из БД и полученного. Если совпадают - пароль верный\n",
+    "        return redirect(\"/saveError\")#если нет - страница ошибки\n",
+    "    newKey=sha256(''.join(random.choices(string.ascii_letters + string.digits, k=10)).encode('utf-8')).hexdigest()#новый ключ\n",
+    "    db.apps.update_one({\"_id\":ObjectId(appID)},#изменение ключа в БД\n",
     "                       {'$set': \n",
     "                       {\n",
     "                           \"secretKey\":newKey\n",
     "                       }})\n",
-    "    link=db.links.insert_one({\"appID\":ObjectId(appObject[\"_id\"])})\n",
-    "    return redirect(f\"/secretKey?link_id={link.inserted_id}\")\n",
+    "    link=db.links.insert_one({\"appID\":ObjectId(appObject[\"_id\"])})#создание временной ссылки\n",
+    "    return redirect(f\"/secretKey?link_id={link.inserted_id}\")#и переадресация на неё для показа секретного ключа\n",
     "\n",
-    "@app.route(\"/devDelete\",methods=[\"POST\"])\n",
+    "@app.route(\"/devDelete\",methods=[\"POST\"])#запрос разработчика на удаление приложения\n",
     "def devDelete():\n",
     "    appID=request.form.get('appID', \"\")\n",
     "    client = MongoClient(port=DATABASE_PORT)\n",
@@ -259,10 +263,10 @@
     "    newKey=sha256(''.join(random.choices(string.ascii_letters + string.digits, k=10)).encode('utf-8')).hexdigest()\n",
     "    client = MongoClient(port=DATABASE_PORT)\n",
     "    db=client.srp\n",
-    "    db.apps.delete_one({\"_id\":ObjectId(appID)})\n",
+    "    db.apps.delete_one({\"_id\":ObjectId(appID)})#удаление приложения\n",
     "    return redirect(\"/\")\n",
     "\n",
-    "@app.route(\"/devChangePassword\",methods=[\"POST\"])\n",
+    "@app.route(\"/devChangePassword\",methods=[\"POST\"])#запрос разработчика на изменение пароля приложения\n",
     "def devChangePassword():\n",
     "    if len(request.form.get('newPassword', \"\"))<10:\n",
     "        return redirect(\"/saveError\")\n",
@@ -279,7 +283,7 @@
     "    passwordHash=sha256((salt+request.form.get('newPassword', \"\")).encode('utf-8')).hexdigest()\n",
     "    client = MongoClient(port=DATABASE_PORT)\n",
     "    db=client.srp\n",
-    "    db.apps.update_one({\"_id\":ObjectId(appID)},\n",
+    "    db.apps.update_one({\"_id\":ObjectId(appID)},#изменение пароля\n",
     "                       {'$set': \n",
     "                       {\n",
     "                           \"passwordHash\":passwordHash,\n",
@@ -287,7 +291,7 @@
     "                       }})\n",
     "    return redirect(f\"/getApp?id={appID}\")\n",
     "\n",
-    "@app.route(\"/adminChangePassword\",methods=[\"POST\"])\n",
+    "@app.route(\"/adminChangePassword\",methods=[\"POST\"])#запрос администратора на изменение пароля приложения\n",
     "def adminChangePassword():\n",
     "    if len(request.form.get('newPassword', \"\"))<10:\n",
     "        return redirect(\"/saveError\")\n",
@@ -301,7 +305,7 @@
     "    passwordHash=sha256((salt+request.form.get('newPassword', \"\")).encode('utf-8')).hexdigest()\n",
     "    client = MongoClient(port=DATABASE_PORT)\n",
     "    db=client.srp\n",
-    "    db.apps.update_one({\"_id\":ObjectId(appID)},\n",
+    "    db.apps.update_one({\"_id\":ObjectId(appID)},#изменение пароля\n",
     "                       {'$set': \n",
     "                       {\n",
     "                           \"passwordHash\":passwordHash,\n",
