--- a/Server SRP/Server SRP.ipynb
+++ b/Server SRP/Server SRP.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -25,9 +25,9 @@
     }
    ],
    "source": [
-    "SERVER_PORT=49052\n",
-    "SERVER_HOST='0.0.0.0'\n",
-    "DATABASE_PORT=27017\n",
+    "SERVER_PORT=49052#порт сервера\n",
+    "SERVER_HOST='0.0.0.0'#хост сервера\n",
+    "DATABASE_PORT=27017#порт Базы данных СРП\n",
     "\n",
     "import datetime\n",
     "from bson.objectid import ObjectId\n",
@@ -53,10 +53,10 @@
     "from urllib.parse import urlparse, parse_qsl, urlencode\n",
     "import json\n",
     "\n",
-    "app = Flask(__name__)\n",
+    "app = Flask(__name__)#создание объекта сервера\n",
     "app.config['TEMPLATES_AUTO_RELOAD'] = True\n",
     "\n",
-    "@app.after_request\n",
+    "@app.after_request#запрет кеширования\n",
     "def add_header(r):\n",
     "    r.headers[\"Cache-Control\"] = \"no-cache, no-store, must-revalidate\"\n",
     "    r.headers[\"Pragma\"] = \"no-cache\"\n",
@@ -64,26 +64,26 @@
     "    r.headers['Cache-Control'] = 'public, max-age=0'\n",
     "    return r\n",
     "\n",
-    "@app.route('/',methods=[\"POST\"])\n",
+    "@app.route('/',methods=[\"POST\"])#проверка команды\n",
     "def command():\n",
-    "    t=request.json\n",
+    "    t=request.json#данные от Клиента СРП\n",
     "    client = MongoClient(port=DATABASE_PORT)\n",
     "    db=client.srp\n",
     "    appID=t[\"appID\"]\n",
-    "    appObject=db.apps.find_one({\"_id\":ObjectId(appID)})\n",
-    "    tSign=b64encode(HMAC(appObject[\"secretKey\"].encode(), t[\"commandHash\"].encode(), sha256).digest())\n",
-    "    if t[\"appURL\"]!=appObject[\"appSite\"]:\n",
-    "        return \"False\"\n",
-    "    if tSign.decode(\"utf-8\")==t[\"serverSign\"]:\n",
-    "        allowedCommands=list()\n",
+    "    appObject=db.apps.find_one({\"_id\":ObjectId(appID)})#поиск объекта приложения\n",
+    "    tSign=b64encode(HMAC(appObject[\"secretKey\"].encode(), t[\"commandHash\"].encode(), sha256).digest())#вычисление подписи\n",
+    "    if t[\"appURL\"]!=appObject[\"appSite\"]:#проверка соответствия адреса приложения заявленному\n",
+    "        return \"False\"#если приложение было запущено по другому адресу, команда не будет выполнена\n",
+    "    if tSign.decode(\"utf-8\")==t[\"serverSign\"]:#проверка правильности подписи\n",
+    "        allowedCommands=list()#лист с доступными для приложения командами\n",
     "        for i in [\"list\",\"read\",\"write\",\"delete\",\"mkdir\",\"rename\"]:\n",
-    "            if appObject[i]==\"on\":\n",
+    "            if appObject[i]==\"on\":#команда доступна, если ей соответствует значение on\n",
     "                allowedCommands.append(i)\n",
-    "        return str(t[\"type\"] in allowedCommands)\n",
+    "        return str(t[\"type\"] in allowedCommands)#проверка наличия команды в списке разрешённых\n",
     "    else:\n",
-    "        return \"False\"\n",
+    "        return \"False\"#если подпись не совпала, решение отрицательное\n",
     "\n",
-    "app.run(host=SERVER_HOST, port=SERVER_PORT, threaded=True)"
+    "app.run(host=SERVER_HOST, port=SERVER_PORT, threaded=True)#запуск сервера"
    ]
   }
  ],
