--- a/Client SRP/Client SRP.ipynb
+++ b/Client SRP/Client SRP.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "scrolled": true
    },
@@ -27,9 +27,9 @@
     }
    ],
    "source": [
-    "CLIENT_PORT=49053\n",
-    "CLIENT_HOST='0.0.0.0'\n",
-    "SERVER_URL='http://localhost:49052'\n",
+    "CLIENT_PORT=49053#порт клиента\n",
+    "CLIENT_HOST='0.0.0.0'#хост клиента\n",
+    "SERVER_URL='http://localhost:49052'#адрес Сервера СРП\n",
     "\n",
     "import datetime\n",
     "from bson.objectid import ObjectId\n",
@@ -56,11 +56,11 @@
     "import win32api\n",
     "import shutil\n",
     "\n",
-    "app = Flask(__name__)\n",
+    "app = Flask(__name__)# создание объекта сервера\n",
     "app.config['TEMPLATES_AUTO_RELOAD'] = True\n",
     "CORS(app)\n",
     "\n",
-    "@app.after_request\n",
+    "@app.after_request#запрет кеширования\n",
     "def add_header(r):\n",
     "    r.headers[\"Cache-Control\"] = \"no-cache, no-store, must-revalidate\"\n",
     "    r.headers[\"Pragma\"] = \"no-cache\"\n",
@@ -68,102 +68,109 @@
     "    r.headers['Cache-Control'] = 'public, max-age=0'\n",
     "    return r\n",
     "\n",
-    "@app.route('/',methods=[\"POST\"])\n",
+    "@app.route('/',methods=[\"POST\"])#функция для получения команд\n",
     "def comand():\n",
-    "    t=request.json\n",
-    "    o=dict()\n",
+    "    t=request.json#получение данных\n",
+    "    o=dict()#создание объекта команды для хеширования\n",
     "    o[\"type\"]=t[\"type\"]\n",
     "    o[\"appID\"]=t[\"appID\"]\n",
-    "    o[\"args\"]=OrderedDict(sorted(t[\"args\"].items(), key=lambda x: x))\n",
+    "    o[\"args\"]=OrderedDict(sorted(t[\"args\"].items(), key=lambda x: x))#сортировка аргументов команды\n",
     "    o=OrderedDict(sorted(o.items(), key=lambda x: x))\n",
     "    commmandInJSON=json.dumps(o,separators=(',', ':'))\n",
-    "    commandHash=sha256(commmandInJSON.encode(\"utf-8\")).hexdigest()\n",
-    "    commandObject=dict()\n",
+    "    commandHash=sha256(commmandInJSON.encode(\"utf-8\")).hexdigest()#хеширование команды\n",
+    "    commandObject=dict()#создание объекта команды\n",
     "    commandObject[\"appID\"]=o[\"appID\"]\n",
     "    commandObject[\"type\"]=o[\"type\"]\n",
     "    commandObject[\"commandHash\"]=commandHash\n",
     "    commandObject[\"serverSign\"]=t[\"serverSign\"]\n",
     "    commandObject[\"appURL\"]=request.headers.get(\"Referer\")\n",
-    "    x = requests.post(SERVER_URL, json = commandObject)\n",
+    "    x = requests.post(SERVER_URL, json = commandObject)#отправка объекта команды на Сервер СРП для проверки\n",
     "    responseObject=dict()\n",
-    "    responseObject[\"auth\"]=x.text == \"True\"\n",
-    "    if responseObject[\"auth\"] == True:\n",
-    "        try:\n",
-    "            if t[\"type\"]==\"read\":\n",
+    "    if x.text == \"True\":#если сервер разрешает выполнение команды\n",
+    "        responseObject[\"auth\"]= \"True\"\n",
+    "    else:\n",
+    "        responseObject[\"auth\"]= \"False\"#если сервер запрещает выполнение команды\n",
+    "    if responseObject[\"auth\"] == \"True\":#дальнейшие действия производятся только в случае положительного решения Сервер СРП\n",
+    "        try:#отслеживание ошибок\n",
+    "            if t[\"type\"]==\"read\":#выполнение команды чтения файла\n",
     "                responseObject[\"result\"]=dict()\n",
-    "                responseObject[\"result\"][\"path\"]=t[\"args\"][\"path\"]\n",
-    "                with open(unquote(t[\"args\"][\"path\"]), \"rb\") as file:\n",
-    "                    responseObject[\"result\"][\"bytes\"]=list(file.read())\n",
-    "                    responseObject[\"result\"][\"success\"]=\"True\"\n",
-    "            if t[\"type\"]==\"write\":\n",
+    "                responseObject[\"result\"][\"path\"]=t[\"args\"][\"path\"]#путь выполнения\n",
+    "                with open(unquote(t[\"args\"][\"path\"]), \"rb\") as file:#чтение файла\n",
+    "                    responseObject[\"result\"][\"bytes\"]=list(file.read())#формирование списка байт\n",
+    "                    responseObject[\"result\"][\"success\"]=\"True\"#маркировка успешного результата\n",
+    "            if t[\"type\"]==\"write\":#запись файла\n",
     "                responseObject[\"result\"]=dict()\n",
     "                responseObject[\"result\"][\"path\"]=t[\"args\"][\"path\"]\n",
     "                with open(unquote(t[\"args\"][\"path\"]), \"wb\") as file:\n",
-    "                    file.write(bytearray(t[\"args\"][\"bytes\"]))\n",
+    "                    file.write(bytearray(t[\"args\"][\"bytes\"]))#запись в файл списка байт из аргументов\n",
     "                    responseObject[\"result\"][\"success\"]=\"True\"\n",
-    "            if t[\"type\"]==\"list\":\n",
+    "            if t[\"type\"]==\"list\":#список файлов и папок\n",
     "                responseObject[\"result\"]=dict()\n",
     "                path=unquote(t[\"args\"][\"path\"])\n",
-    "                if path==\"\":\n",
+    "                if path==\"\":#если путь не указан, выполняется получение списка жёстких дисков\n",
     "                    disks = win32api.GetLogicalDriveStrings()\n",
     "                    disks = disks.split('\\000')[:-1]\n",
     "                    responseObject[\"result\"][\"path\"]=\"\"\n",
     "                    responseObject[\"result\"][\"files\"]=list()\n",
-    "                    responseObject[\"result\"][\"folders\"]=[{\"path\":i.replace(\"\\\\\", \"/\"),\"title\":i.replace(\"\\\\\", \"/\")} for i in disks]\n",
+    "                    responseObject[\"result\"][\"folders\"]=[{\"path\":i.replace(\"\\\\\", \"/\"),\n",
+    "                                                          \"title\":i.replace(\"\\\\\", \"/\")\n",
+    "                                                         } for i in disks]# формирование списка дисков\n",
     "                else:\n",
-    "                    if path[0]==\"%\":\n",
-    "                        path=os.environ[path[1:-1]].replace(\"\\\\\", \"/\")\n",
-    "                    if path[-1]!=\"/\":\n",
+    "                    if path[0]==\"%\":#если путь содержит переменную окружения\n",
+    "                        path=os.environ[path[1:-1]].replace(\"\\\\\", \"/\")#путь заменяется на переменную окружения\n",
+    "                    if path[-1]!=\"/\":#если путь не заканчивается на слеш, то это исправляется\n",
     "                        path=path+\"/\"\n",
-    "                    directoryPath,folders,files=next(os.walk(path))\n",
-    "                    folders=[{\"title\":quote(i),\n",
-    "                              \"modify\":os.stat(os.path.join(directoryPath,i).replace(\"\\\\\", \"/\")).st_mtime,\n",
-    "                              \"create\":os.stat(os.path.join(directoryPath,i).replace(\"\\\\\", \"/\")).st_ctime,\n",
-    "                              \"path\":quote(os.path.join(directoryPath,i).replace(\"\\\\\", \"/\"))} for i in folders]\n",
-    "                    files=[{\"title\":quote(i),\n",
-    "                            \"size\":os.stat(os.path.join(directoryPath,i).replace(\"\\\\\", \"/\")).st_size,\n",
-    "                            \"modify\":os.stat(os.path.join(directoryPath,i).replace(\"\\\\\", \"/\")).st_mtime,\n",
-    "                            \"create\":os.stat(os.path.join(directoryPath,i).replace(\"\\\\\", \"/\")).st_ctime,\n",
-    "                            \"path\":quote(os.path.join(directoryPath,i).replace(\"\\\\\", \"/\"))} for i in files]\n",
-    "                    responseObject[\"result\"][\"path\"]=directoryPath\n",
-    "                    responseObject[\"result\"][\"files\"]=files\n",
-    "                    responseObject[\"result\"][\"folders\"]=folders\n",
+    "                    directoryPath,folders,files=next(os.walk(path))#получение списка папок в папке\n",
+    "                    #формирование списка папок\n",
+    "                    folders=[{\"title\":quote(i),#имя папки\n",
+    "                              \"modify\":os.stat(os.path.join(directoryPath,i).replace(\"\\\\\", \"/\")).st_mtime,#время изменения\n",
+    "                              \"create\":os.stat(os.path.join(directoryPath,i).replace(\"\\\\\", \"/\")).st_ctime,#время создания\n",
+    "                              \"path\":quote(os.path.join(directoryPath,i).replace(\"\\\\\", \"/\"))} for i in folders]#путь\n",
+    "                    #формирование списка файлов\n",
+    "                    files=[{\"title\":quote(i),#имя файла\n",
+    "                            \"size\":os.stat(os.path.join(directoryPath,i).replace(\"\\\\\", \"/\")).st_size,#размер файла\n",
+    "                            \"modify\":os.stat(os.path.join(directoryPath,i).replace(\"\\\\\", \"/\")).st_mtime,#время изменения\n",
+    "                            \"create\":os.stat(os.path.join(directoryPath,i).replace(\"\\\\\", \"/\")).st_ctime,#время создания\n",
+    "                            \"path\":quote(os.path.join(directoryPath,i).replace(\"\\\\\", \"/\"))} for i in files]#путь\n",
+    "                    responseObject[\"result\"][\"path\"]=directoryPath#путь папки\n",
+    "                    responseObject[\"result\"][\"files\"]=files#файлы в ней\n",
+    "                    responseObject[\"result\"][\"folders\"]=folders#папки в ней\n",
     "                responseObject[\"result\"][\"success\"]=\"True\"\n",
-    "            if t[\"type\"]==\"delete\":\n",
+    "            if t[\"type\"]==\"delete\":#удаление\n",
     "                responseObject[\"result\"]=dict()\n",
     "                path=unquote(t[\"args\"][\"path\"]).replace(\"\\\\\", \"/\")\n",
-    "                if os.path.isdir(path):\n",
-    "                    shutil.rmtree(path)\n",
-    "                else:\n",
-    "                    os.remove(path)\n",
+    "                if os.path.isdir(path):#если это папка\n",
+    "                    shutil.rmtree(path)#удаление папки\n",
+    "                else:#если это файл\n",
+    "                    os.remove(path)#удаление файла\n",
     "                responseObject[\"result\"][\"success\"]=\"True\"\n",
-    "            if t[\"type\"]==\"mkdir\":\n",
+    "            if t[\"type\"]==\"mkdir\":#создание папки\n",
     "                responseObject[\"result\"]=dict()\n",
     "                path=unquote(t[\"args\"][\"path\"])\n",
-    "                if path==\"\":\n",
+    "                if path==\"\":#папку нельзя создать без пути\n",
     "                    responseObject[\"result\"][\"success\"]=\"False\"\n",
     "                else:\n",
-    "                    if path[0]==\"%\":\n",
+    "                    if path[0]==\"%\":#переменные окружения не допускаются\n",
     "                        responseObject[\"result\"][\"success\"]=\"False\"\n",
     "                    else:\n",
-    "                        os.mkdir(path)\n",
+    "                        os.mkdir(path)#создание папки\n",
     "                        responseObject[\"result\"][\"success\"]=\"True\"\n",
-    "            if t[\"type\"]==\"rename\":\n",
+    "            if t[\"type\"]==\"rename\":#переименование\n",
     "                responseObject[\"result\"]=dict()\n",
     "                path=unquote(t[\"args\"][\"path\"])\n",
     "                newName=unquote(t[\"args\"][\"newName\"])\n",
-    "                if path==\"\":\n",
+    "                if path==\"\":#переименовывать пустой путь нельзя\n",
     "                    responseObject[\"result\"][\"success\"]=\"False\"\n",
     "                else:\n",
-    "                    if path[0]==\"%\":\n",
+    "                    if path[0]==\"%\":#переменные окружения не допускаются\n",
     "                        responseObject[\"result\"][\"success\"]=\"False\"\n",
     "                    else:\n",
-    "                        os.rename(path, newName)\n",
+    "                        os.rename(path, newName)#переименование\n",
     "                        responseObject[\"result\"][\"success\"]=\"True\"\n",
-    "        except Exception:\n",
-    "            responseObject[\"result\"][\"success\"]=\"False\"\n",
-    "    return responseObject\n",
-    "app.run(host=CLIENT_HOST, port=CLIENT_PORT, threaded=True)"
+    "        except Exception:#если операционная система не смогла выполнить команду\n",
+    "            responseObject[\"result\"][\"success\"]=\"False\"#маркет неуспешного завершения команды\n",
+    "    return responseObject#возврат веб-приложеию объекта ответа\n",
+    "app.run(host=CLIENT_HOST, port=CLIENT_PORT, threaded=True)#запуск сервера"
    ]
   }
  ],
