Скорректирован серверный код

--- a/Server SRP/Server SRP.ipynb
+++ b/Server SRP/Server SRP.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -70,11 +70,11 @@
     "    client = MongoClient(port=DATABASE_PORT)\n",
     "    db=client.srp\n",
     "    appID=t[\"appID\"]\n",
-    "    appObject=db.apps.find_one({\"_id\":ObjectId(appID)})#поиск объекта приложения\n",
-    "    tSign=b64encode(HMAC(appObject[\"secretKey\"].encode(), t[\"commandHash\"].encode(), sha256).digest())#вычисление подписи\n",
-    "    if t[\"appURL\"]!=appObject[\"appSite\"]:#проверка соответствия адреса приложения заявленному\n",
+    "    appObject=db.apps.find_one({\"_id\":ObjectId(request.json[\"appID\"])})#поиск объекта приложения\n",
+    "    tSign=b64encode(HMAC(appObject[\"secretKey\"].encode(), request.json[\"commandHash\"].encode(), sha256).digest())#вычисление подписи\n",
+    "    if request.json[\"appURL\"]!=appObject[\"appSite\"]:#проверка соответствия адреса приложения заявленному\n",
     "        return \"False\"#если приложение было запущено по другому адресу, команда не будет выполнена\n",
-    "    if tSign.decode(\"utf-8\")==t[\"serverSign\"]:#проверка правильности подписи\n",
+    "    if tSign.decode(\"utf-8\")==request.json[\"serverSign\"]:#проверка правильности подписи\n",
     "        allowedCommands=list()#лист с доступными для приложения командами\n",
     "        for i in [\"list\",\"read\",\"write\",\"delete\",\"mkdir\",\"rename\"]:\n",
     "            if appObject[i]==\"on\":#команда доступна, если ей соответствует значение on\n",
