Скорректирован серверный код

--- a/Server SRP/Server SRP.ipynb
+++ b/Server SRP/Server SRP.ipynb
@@ -79,7 +79,7 @@
     "        for i in [\"list\",\"read\",\"write\",\"delete\",\"mkdir\",\"rename\"]:\n",
     "            if appObject[i]==\"on\":#команда доступна, если ей соответствует значение on\n",
     "                allowedCommands.append(i)\n",
-    "        return str(t[\"type\"] in allowedCommands)#проверка наличия команды в списке разрешённых\n",
+    "        return str(request.json[\"type\"] in allowedCommands)#проверка наличия команды в списке разрешённых\n",
     "    else:\n",
     "        return \"False\"#если подпись не совпала, решение отрицательное\n",
     "\n",
